new Ideas on datapack download

--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "start:prod": "node dist/main",
     "start:kind": "kind create cluster --config=kind-config.yaml --name=q3",
     "start:kind:namespace": "kubectl create ns q3-operator",
+    "cleanup:kind": "pnpm stop:kind && pnpm run start:kind && pnpm run start:kind:namespace",
+    "cleanup:kind:dev": "pnpm run cleanup:kind && pnpm run start:dev",
+    "k8s:deploy:dashboard": "kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml",
+    "k8s:create-user-sa": "kubectl apply -f resources/create-dashboard-user.yaml",
+    "k8s:get-admin-user-token": "kubectl get secret admin-user -n kubernetes-dashboard -o jsonpath={\".data.token\"} | base64 -d",
+    "k8s:proxy": "kubectl proxy",
+    "i-am-lazy:take-blue-pill": "sh ./lazy-do-all.sh",
     "stop:kind": "kind delete cluster --name=q3",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
