--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "start:kind": "kind create cluster --config=kind-config.yaml --name=q3",
-    "start:kind:namespace": "kubectl create ns q3-operator",
+    "start:kind:namespace": "kubectl create ns quake3-system",
     "cleanup:kind": "pnpm stop:kind && pnpm run start:kind && pnpm run start:kind:namespace",
     "cleanup:kind:dev": "pnpm run cleanup:kind && pnpm run start:dev",
     "k8s:deploy:dashboard": "kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml",
@@ -31,12 +31,16 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^3.0.1",
     "@nestjs/swagger": "^7.1.4",
+    "@willsoto/nestjs-prometheus": "^5.2.1",
+    "axios": "^1.4.0",
+    "prom-client": "^14.2.0",
     "quake3-rcon": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
