branch name in gitops

--- a/.github/workflows/build-and-push-operator.yaml
+++ b/.github/workflows/build-and-push-operator.yaml
@@ -4,7 +4,7 @@ name: Build & Push Operator
 # release). This isn't dependant on the tests passing or the linter being happy.
 on:
   push:
-    branches: [main]
+    branches: [master]
     tags:
       - "v*.*.*"
 
