--- a/deploy/operator/metrics.yaml
+++ b/deploy/operator/metrics.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: q3-operator-metrics-monitor
-  namespace: quake3-system
+  namespace: quake3-operator-system
   labels:
     operator: q3-operator
 spec:
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: q3-operator-metrics-service
-  namespace: quake3-system
+  namespace: quake3-operator-system
   labels:
     operator: q3-operator
 spec:
