--- a/deploy/operator/namespace.yaml
+++ b/deploy/operator/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: quake3-system
+  name: quake3-operator-system
   labels:
     operator: q3-operator
