--- a/deploy/operator/rbac.yaml
+++ b/deploy/operator/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: q3-operator
-  namespace: quake3-system
+  namespace: quake3-operator-system
   labels:
     operator: q3-operator
 ---
@@ -10,7 +10,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: leader-election-role
-  namespace: quake3-system
+  namespace: quake3-operator-system
   labels:
     operator: q3-operator
 rules:
@@ -50,7 +50,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: leader-election-rolebinding
-  namespace: quake3-system
+  namespace: quake3-operator-system
   labels:
     operator: q3-operator
 roleRef:
@@ -60,7 +60,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: q3-operator
-    namespace: quake3-system
+    namespace: quake3-operator-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -161,4 +161,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: q3-operator
-    namespace: quake3-system
+    namespace: quake3-operator-system
