--- a/.github/workflows/build-and-push-operator.yaml
+++ b/.github/workflows/build-and-push-operator.yaml
@@ -52,7 +52,7 @@ jobs:
           file: operator.Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags:-"dev" }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
