--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "start:kind": "kind create cluster --config=kind-config.yaml --name=q3",
-    "start:kind:namespace": "kubectl create ns quake3-system",
-    "cleanup:kind": "pnpm stop:kind && pnpm run start:kind && pnpm run start:kind:namespace",
-    "cleanup:kind:dev": "pnpm run cleanup:kind && pnpm run start:dev",
+    "start:kind:namespace": "kubectl create ns quake3-operator-system",
+    "cleanup:kind": "pnpm stop:kind && pnpm run start:kind",
+    "cleanup:kind:dev": "pnpm run cleanup:kind && pnpm run start:kind:namespace && pnpm run start:dev",
     "k8s:deploy:dashboard": "kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml",
     "k8s:create-user-sa": "kubectl apply -f resources/create-dashboard-user.yaml",
-    "k8s:get-admin-user-token": "kubectl get secret admin-user -n kubernetes-dashboard -o jsonpath={\".data.token\"} | base64 -d",
+    "k8s:get-admin-user-token": "kubectl get secret admin-user -n kubernetes-dashboard -o jsonpath={\".data.token\"} > token.txt && cat token.txt",
     "k8s:proxy": "kubectl proxy",
     "i-am-lazy:take-blue-pill": "sh ./lazy-do-all.sh",
     "stop:kind": "kind delete cluster --name=q3",
