Ready To Release! Yuppee!

--- a/.github/workflows/build-and-push-operator.yaml
+++ b/.github/workflows/build-and-push-operator.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=edge,branch=main
+            type=edge,branch=master
             type=ref,event=tag
 
       - name: Build and push Docker image
@@ -52,7 +52,7 @@ jobs:
           file: operator.Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ steps.meta.outputs.tags || 'latest' }}
+          tags: ${{ steps.meta.outputs.tags || 'kalik1/q3-operator:master' }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
