--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "start:kind": "kind create cluster --config=kind-config.yaml --name=q3",
-    "start:kind:namespace": "kubectl create ns quake3-operator-system || kubectl apply -f deploy/operator/crd/server-q3-operator.crd.yaml",
+    "start:kind:namespace": "kubectl create ns quake3-operator-system || kubectl apply -f deploy/operator/crd/server-q3-operator.crd.yaml || kubectl apply -f deploy/operator/crd/mod-q3-operator.crd.yaml",
     "cleanup:kind": "pnpm stop:kind && pnpm run start:kind",
     "cleanup:kind:dev": "pnpm run cleanup:kind && pnpm run start:kind:namespace && pnpm run start:dev",
     "k8s:deploy:dashboard": "kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml",
@@ -40,6 +40,7 @@
     "@nestjs/swagger": "^7.1.4",
     "@willsoto/nestjs-prometheus": "^5.2.1",
     "axios": "^1.4.0",
+    "fast-json-patch": "^3.1.1",
     "prom-client": "^14.2.0",
     "quake3-rcon": "^1.0.2",
     "reflect-metadata": "^0.1.13",
