--- a/resources/create-dashboard-user.yaml
+++ b/resources/create-dashboard-user.yaml
@@ -19,9 +19,9 @@ metadata:
 ---
 apiVersion: v1
 kind: Secret
+type: kubernetes.io/service-account-token
 metadata:
   name: admin-user
   namespace: kubernetes-dashboard
   annotations:
-    kubernetes.io/service-account.name: "admin-user"
-type: kubernetes.io/service-account-token
+    kubernetes.io/service-account.name: admin-user
