--- a/deploy/operator/deployment.yaml
+++ b/deploy/operator/deployment.yaml
@@ -33,13 +33,15 @@ spec:
             httpGet:
               path: /healthz
               port: 3000
-            initialDelaySeconds: 15
+            initialDelaySeconds: 30
+            timeoutSeconds: 3
             periodSeconds: 20
           readinessProbe:
             httpGet:
               path: /healthz
               port: 3000
-            initialDelaySeconds: 5
+            initialDelaySeconds: 20
+            timeoutSeconds: 3
             periodSeconds: 10
           resources:
             limits:
